Fix add pop-up alignment and date autofill

--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -272,6 +272,11 @@ body {
     background-color: royalblue;
 }
 
+.popup-form label:not(#autofill-date-label) {
+    display: inline-block;
+    width: 90px;
+}
+
 .form-element {
     color: lightblue;
     display: block;
